# chess_rust

./: .gitignore  Cargo.toml  README.md  benchmark.txt  build-cargo-bin.sh  build.rs  build.sh  top_flag = Arc::clone(&self.stop_flag);
epd/: CCR_One_Hour_Test.epd  Eigennman_Rapid_engine_test.epd
src/: benchmark.rs  board.rs  engine.rs  entity.rs  game.rs  lib.rs  main.rs  monitoring.rs  uci.rs  ui.rs
src/benchmark/: epd_reader.rs  launcher.rs  scoring.rs
src/board/: bitboard.rs  coord.rs  fen.rs  game.rs  san.rs  square.rs
src/board/bitboard/: piece_move.rs  zobrist.rs
src/board/bitboard/piece_move/: table.rs
src/entity/: engine.rs  stat.rs
src/entity/clock/: actor.rs
src/entity/clock/actor/: chessclock.rs
src/entity/engine/: actor.rs  component.rs
src/entity/engine/actor/: engine_dispatcher.rs
src/entity/engine/component/: engine_alphabeta.rs  engine_alphabeta_inc.rs  engine_alphabeta_iterative.rs  engine_dummy.rs  engine_iddfs.rs  engine_logic.rs  engine_mat.rs  engine_mcts.rs  engine_minimax.rs  evaluation.rs  (+9 more)
src/entity/game/: component.rs
src/entity/stat/: actor.rs  component.rs
src/entity/uci/: actor.rs
src/game/: chessclock.rs  configuration.rs  engine.rs  game_manager.rs  game_state.rs  parameters.rs  player.rs
src/game/monitoring/: debug.rs
src/monitoring/: debug.rs
src/uci/: command.rs  event.rs  notation.rs
src/uci/command/: parser.rs
src/ui/: board.rs  notation.rs  uci.rs
src/ui/notation/: epd.rs  fen.rs  long_notation.rs  san.rs
src/ui/uci/: command.rs  event.rs
tests/: epd_read_test.rs
tests/data/: example.epd
(+37 files in other folders)
