[package]
name = "chess_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
chrono = "0.4.39"
num_cpus = "1.16.0"
petgraph = "0.6.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
tokio = { version = "1.40.0", features = ["full"]}
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[lib]
name="chess_actix"
path="src/lib.rs"

[profile.release]
debug = true

[build-dependencies]
chrono = "0.4"


